# pyflyt-drone-rl

./: .gitignore  README.md  hover_test.py  model_registry.py  pyproject.toml  train.py
envs/: __init__.py  base_drone_env.py  gate_env.py  hover_env.py  waypoint_env.py
goals/: __init__.py  gate.py  moving_point.py  static_point.py
