[project]
name = "pyflyt-dronesim"
version = "0.1.0"
description = "Minimal PyFlyt QuadX hover simulation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=1.26,<2",
    "PyFlyt==0.28.0",
    "stable-baselines3>=2.3",
    "tensorboard",
    "tqdm",
    "rich",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false